[workspace]

members = [
    "cita-common-benches",

    "error",
    "panic_hook",
    "worker",
    "cita-types",
    "snappy",
    "cita-directories",
    "util",

    "pubsub_zeromq",
    "pubsub_rabbitmq",
    "pubsub_kafka",
    "pubsub",

    "hashable",
    "cita-merklehash",
    "blake2b",
    "cita-sm2",
    "cita-secp256k1",
    "cita-ed25519",
    "cita-crypto-trait",
    "cita-crypto",

    "libproto",

    "tx_pool",

    "proof",
    "authority_manage",

    "jsonrpc-types",
    "cita-web3",
    "jsonrpc-proto",

    "engine",
]
