[package]
name = "authority_manage"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]

[dependencies]
serde = "1.0"
bincode = "0.8.0"
serde_json = "1.0"
serde_derive = "1.0"
util = { path = "../util" }

[features]
default = []
sha3hash = ["util/sha3hash"]
blake2bhash = ["util/blake2bhash"]
sm3hash = ["util/sm3hash"]
