[package]
name = "cita-common-benches"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
rand = "0.4"

[dev-dependencies]
criterion = "0.3.3"
tiny-keccak= "1.4"
blake2b = { path = "../blake2b" }
secp256k1 = {version = "0.12", features = ["rand"]}
sodiumoxide = "0.2.2"
libsm = { git = "https://github.com/citahub/libsm", branch = "smx" }

[[bench]]
name = "hash-algos"
harness = false

[[bench]]
name = "sign-algos"
harness = false
