[package]
name = "cita-common-benches"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
rand = "0.8"

[dev-dependencies]
criterion = "0.4"
tiny-keccak= "2.0"
blake2b = { path = "../blake2b" }
secp256k1 = {version = "0.26", features = ["rand"]}
sodiumoxide = "0.2"
libsm = "0.5"

[[bench]]
name = "hash-algos"
harness = false

[[bench]]
name = "sign-algos"
harness = false
