[package]
name = "cita-crypto"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]

[dependencies]
cita-ed25519 = { path = "../cita-ed25519", optional = true  }
cita-secp256k1 = { path = "../cita-secp256k1", optional = true  }
cita-sm2 = { path = "../cita-sm2", optional = true  }
util = { path = "../util" }

[features]
default = []
secp256k1 = ["cita-secp256k1", "cita-secp256k1/sha3hash"]
ed25519 = ["cita-ed25519", "cita-ed25519/blake2bhash"]
sm2 = ["cita-sm2", "cita-sm2/sm3hash"]
sha3hash = ["util/sha3hash"]
blake2bhash = ["util/blake2bhash"]
sm3hash = ["util/sm3hash"]
