[package]
name = "cita-ed25519"
version = "0.6.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
rustc-serialize = "0.3"
sodiumoxide = "0.2.2"
cita-types = { path = "../cita-types" }
hashable = { path = "../hashable" }
cita-crypto-trait = { path = "../cita-crypto-trait" }
rlp = { path = "../rlp" }
serde = "1.0"
bincode = "0.8.0"

[features]
default = []
sha3hash = ["hashable/sha3hash"]
blake2bhash = ["hashable/blake2bhash"]
sm3hash = ["hashable/sm3hash"]
