[package]
name = "cita-ed25519"
version = "0.6.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
rustc-serialize = "0.3.24"
sodiumoxide = "0.2.5"
cita-types = { path = "../cita-types" }
hashable = { path = "../hashable" }
cita-crypto-trait = { path = "../cita-crypto-trait" }
rlp = "0.4.4"
serde = "1.0.103"
bincode = "1.2.0"

[features]
default = []
sha3hash = ["hashable/sha3hash"]
blake2bhash = ["hashable/blake2bhash"]
sm3hash = ["hashable/sm3hash"]
