[package]
name = "cita-merklehash"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
cita-types = { path = "../cita-types" }
hashable = { path = "../hashable" }
rlp = { path = "../rlp" }
static_merkle_tree = "~0.1.1"

[features]
default = []
sha3hash = ["hashable/sha3hash"]
blake2bhash = ["hashable/blake2bhash"]
sm3hash = ["hashable/sm3hash"]
