[package]
name = "cita-secp256k1"
version = "0.6.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]

[dependencies]
eth-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1", rev = "6370d63adf4e8c91e2eae9225eef4b4e0294c5d0" }
lazy_static = "1.1"
rustc-serialize = "0.3"
cita-types = { path = "../cita-types" }
hashable = { path = "../hashable" }
cita-crypto-trait = { path = "../cita-crypto-trait" }
rlp = { path = "../rlp" }
rand = "0.3"
serde = "1.0"
serde_json = "1.0"
bincode = "0.8"

[features]
default = []
sha3hash = ["hashable/sha3hash"]
blake2bhash = ["hashable/blake2bhash"]
sm3hash = ["hashable/sm3hash"]
