[package]
name = "cita-secp256k1"
version = "0.6.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
secp256k1 = {version = "0.15.0", features = ["rand", "recovery"]}
lazy_static = "1.4.0"
rustc-serialize = "0.3.24"
cita-types = { path = "../cita-types" }
hashable = { path = "../hashable" }
cita-crypto-trait = { path = "../cita-crypto-trait" }
rlp = "0.4.4"
rand = "0.6"
serde = "1.0.103"
bincode = "1.2.0"

[features]
default = []
sha3hash = ["hashable/sha3hash"]
blake2bhash = ["hashable/blake2bhash"]
sm3hash = ["hashable/sm3hash"]
