[package]
name = "cita-sm2"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
rustc-serialize = "0.3"
serde = "1.0"
cita-types = { path = "../cita-types" }
hashable = { path = "../hashable" }
cita-crypto-trait = { path = "../cita-crypto-trait" }
rlp = { path = "../rlp" }
libsm = { git = "https://github.com/citahub/libsm", rev = "4d0e6199fca0934c58131de1d0036e9aa4da26c1" }
ring = { git = "https://github.com/Pencil-Yao/ring", branch = "smx" }
untrusted = { version = "0.7.1" }

[features]
default = []
sha3hash = ["hashable/sha3hash"]
blake2bhash = ["hashable/blake2bhash"]
sm3hash = ["hashable/sm3hash"]
