[package]
name = "cita-web3"
version = "0.1.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
jsonrpc-types = { path = "../jsonrpc-types" }
web3 = "0.3.0"
hyper = { git = "https://github.com/cryptape/hyper.git", branch = "reuse_port" }
futures = "0.1"
parking_lot = "0.5"
tokio-core = "0.1"
jsonrpc-core = "8.0.1"
serde_json = "1.0"

[features]
default = []
secp256k1 = ["jsonrpc-types/secp256k1"]
ed25519 = ["jsonrpc-types/ed25519"]
sm2 = ["jsonrpc-types/sm2"]
sha3hash = ["jsonrpc-types/sha3hash"]
blake2bhash = ["jsonrpc-types/blake2bhash"]
sm3hash = ["jsonrpc-types/sm3hash"]
