[package]
name = "cita-web3"
version = "0.1.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
jsonrpc-types = { path = "../jsonrpc-types" }
web3 = "0.4.0"

[features]
default = []
secp256k1 = ["jsonrpc-types/secp256k1"]
ed25519 = ["jsonrpc-types/ed25519"]
sm2 = ["jsonrpc-types/sm2"]
sha3hash = ["jsonrpc-types/sha3hash"]
blake2bhash = ["jsonrpc-types/blake2bhash"]
sm3hash = ["jsonrpc-types/sm3hash"]
