[package]
name = "db"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Cryptape Technologies <contact@cryptape.com>"]

[dependencies]
parity-rocksdb = "0.5"
elastic-array = "0.9"
cita-types = { path = "../cita-types" }
logger = { path = "../logger" }
hashable = { path = "../hashable" }
itertools = "0.5"
heapsize = "0.4"
regex = "1.0.5"
rand = "0.3.12"
util = { path = "../util" }
rlp = { path = "../rlp" }

[dev-dependencies]
mktemp = "0.3.1"

[features]
default = []
sha3hash = ["hashable/sha3hash"]
blake2bhash = ["hashable/blake2bhash"]
sm3hash = ["hashable/sm3hash"]
