[package]
name = "engine"
version = "0.6.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]

[dependencies]
libproto = { path = "../libproto" }
util = { path = "../util" }
cita-crypto = { path = "../cita-crypto" }
cita-types = { path = "../cita-types" }
engine_json = { path = "../engine_json" }
proof = { path = "../proof" }
pubsub = { path = "../pubsub" }

[features]
default = []
secp256k1 = ["cita-crypto/secp256k1", "libproto/secp256k1", "proof/secp256k1", "engine_json/secp256k1"]
ed25519 = ["cita-crypto/ed25519", "libproto/ed25519", "proof/ed25519", "engine_json/ed25519"]
sm2 = ["cita-crypto/sm2", "libproto/sm2", "proof/sm2", "engine_json/sm2"]
sha3hash = ["util/sha3hash", "libproto/sha3hash", "proof/sha3hash"]
blake2bhash = ["util/blake2bhash", "libproto/blake2bhash", "proof/blake2bhash"]
sm3hash = ["util/sm3hash", "libproto/sm3hash", "proof/sm3hash"]
rabbitmq = ["pubsub/rabbitmq"]
zeromq = ["pubsub/zeromq"]
kafka = ["pubsub/kafka"]
