[package]
name = "engine"
version = "0.6.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
util = { path = "../util" }
cita-crypto = { path = "../cita-crypto" }
cita-types = { path = "../cita-types" }

[features]
default = []
secp256k1 = ["cita-crypto/secp256k1"]
ed25519 = ["cita-crypto/ed25519"]
sm2 = ["cita-crypto/sm2"]
sha3hash = []
blake2bhash = []
sm3hash = []
