[package]
name = "engine_json"
version = "0.6.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
cita-types = { path = "../cita-types" }
cita-crypto = { path = "../cita-crypto" }

[features]
default = []
secp256k1 = ["cita-crypto/secp256k1"]
ed25519 = ["cita-crypto/ed25519"]
sm2 = ["cita-crypto/sm2"]
