[package]
name = "hashable"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
cita-types = { path = "../cita-types" }
tiny-keccak= { version = "1.4", optional = true }
blake2b = { path = "../blake2b", optional = true }
libsm = { git = "https://github.com/cryptape/libsm", rev = "ac323abd3512a9fdb8bfd6cd349a6fc46deb688f", optional = true }

[features]
default = []
sha3hash = ["tiny-keccak"]
blake2bhash = ["blake2b"]
sm3hash = ["libsm"]
