[package]
name = "hashable"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
cita-types = { path = "../cita-types" }
tiny-keccak = { version = "2.0.1", features = ["keccak"], optional = true }
blake2b = { path = "../blake2b", optional = true }
libsm = { git = "https://github.com/citahub/libsm", rev = "4d0e6199fca0934c58131de1d0036e9aa4da26c1", optional = true }

[features]
default = []
sha3hash = ["tiny-keccak"]
blake2bhash = ["blake2b"]
sm3hash = ["libsm"]
