[package]
name = "hashable"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
cita-types = { path = "../cita-types" }
tiny-keccak= { version = "2.0", optional = true }
libsodium-sys = { version = "0.2.5", optional = true }
libsm = { version = "0.5", optional = true }

[features]
default = []
sha3hash = ["tiny-keccak"]
blake2bhash = ["libsodium-sys"]
sm3hash = ["libsm"]
