[package]
name = "jsonrpc-proto"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]

[dependencies]
libproto = { path = "../libproto" }
jsonrpc-types = { path = "../jsonrpc-types" }
proof = { path = "../proof" }
cita-types = { path = "../cita-types" }
cita-crypto-trait = { path = "../cita-crypto-trait" }
cita-crypto = { path = "../cita-crypto" }
logger = { path = "../logger" }
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["v4"] }
rustc-serialize = "0.3.24"
bincode = "0.8"

[features]
default = []
secp256k1 = ["libproto/secp256k1"]
ed25519 = ["libproto/ed25519"]
sm2 = ["libproto/sm2"]
sha3hash = ["libproto/sha3hash"]
blake2bhash = ["libproto/blake2bhash"]
sm3hash = ["libproto/sm3hash"]
