[package]
name = "jsonrpc-proto"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
libproto = { path = "../libproto" }
jsonrpc-types = { path = "../jsonrpc-types" }
proof = { path = "../proof" }
cita-types = { path = "../cita-types" }
cita-logger = "0.1.1"
serde = "1.0.103"
serde_json = "1.0.42"
uuid = { version = "0.8.1", features = ["v4"] }
rustc-serialize = "0.3.24"
bincode = "1.2.0"

[dev-dependencies]
cita-crypto = { path = "../cita-crypto" }

[features]
default = []
secp256k1 = ["libproto/secp256k1"]
ed25519 = ["libproto/ed25519"]
sm2 = ["libproto/sm2"]
sha3hash = ["libproto/sha3hash"]
blake2bhash = ["libproto/blake2bhash"]
sm3hash = ["libproto/sm3hash"]
