[package]
name = "jsonrpc-types"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]

[dependencies]
jsonrpc-types-internals = { path = "internals" }
cita-types = { path = "../cita-types" }
bincode = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-serialize = "0.3"

[features]
default = []
