[package]
name = "jsonrpc-types"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
jsonrpc-types-internals = { path = "internals" }
cita-types = { path = "../cita-types" }
bincode = "1.2.0"
serde = "1.0.103"
serde_json = "1.0.42"
serde_derive = "1.0.103"
rustc-serialize = "0.3.24"

[features]
default = []
