[package]
description = "proto"
name = "libproto"
version = "0.6.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]

[dependencies]
protobuf = { version = "2.6.2", features = ["with-bytes"]}
cita-types = { path = "../cita-types" }
cita-merklehash = { path = "../cita-merklehash" }
cita-crypto = { path = "../cita-crypto" }
hashable = { path = "../hashable" }
snappy = { path = "../snappy" }
rustc-serialize = "0.3"
rlp = { path = "../rlp" }
serde = "1.0"
serde_derive = "1.0"
cita-logger = "0.1.0"
grpc = "0.5.0"
tls-api = "0.1.14"

[features]
default = []
secp256k1 = ["cita-crypto/secp256k1"]
ed25519 = ["cita-crypto/ed25519"]
sm2 = ["cita-crypto/sm2"]
sha3hash = ["hashable/sha3hash", "cita-merklehash/sha3hash"]
blake2bhash = ["hashable/blake2bhash", "cita-merklehash/blake2bhash"]
sm3hash = ["hashable/sm3hash", "cita-merklehash/sm3hash"]
