[package]
description = "proto"
name = "libproto"
version = "0.6.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
protobuf = { version = "2.8.1", features = ["with-bytes"]}
cita-types = { path = "../cita-types" }
cita-merklehash = { path = "../cita-merklehash" }
cita-crypto = { path = "../cita-crypto" }
hashable = { path = "../hashable" }
snappy = { path = "../snappy" }
rustc-serialize = "0.3"
rlp = { path = "../rlp" }
serde = "1.0"
serde_derive = "1.0"
cita-logger = "0.1.0"

[features]
default = []
secp256k1 = ["cita-crypto/secp256k1"]
ed25519 = ["cita-crypto/ed25519"]
sm2 = ["cita-crypto/sm2"]
sha3hash = ["hashable/sha3hash", "cita-merklehash/sha3hash"]
blake2bhash = ["hashable/blake2bhash", "cita-merklehash/blake2bhash"]
sm3hash = ["hashable/sm3hash", "cita-merklehash/sm3hash"]
