[package]
name = "proof"
version = "0.6.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
libproto = { path = "../libproto" }
cita-crypto = { path = "../cita-crypto" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "0.8.0"
util = { path = "../util" }
rustc-serialize = "0.3"
