[package]
name = "proof"
version = "0.6.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]

[dependencies]
libproto = { path = "../libproto" }
cita-crypto = { path = "../cita-crypto" }
cita-types = { path = "../cita-types" }
hashable = { path = "../hashable" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "0.8.0"
util = { path = "../util" }
rustc-serialize = "0.3"

[features]
default = []
secp256k1 = ["cita-crypto/secp256k1", "libproto/secp256k1"]
ed25519 = ["cita-crypto/ed25519", "libproto/ed25519"]
sm2 = ["cita-crypto/sm2", "libproto/sm2"]
sha3hash = ["hashable/sha3hash", "util/sha3hash", "libproto/sha3hash"]
blake2bhash = ["hashable/blake2bhash", "util/blake2bhash", "libproto/blake2bhash"]
sm3hash = ["hashable/sm3hash", "util/sm3hash", "libproto/sm3hash"]
