[package]
name = "proof"
version = "0.6.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
libproto = { path = "../libproto" }
cita-crypto = { path = "../cita-crypto" }
cita-types = { path = "../cita-types" }
hashable = { path = "../hashable" }
cita-directories = { path = "../cita-directories" }
serde = "1.0"
serde_derive = "1.0"
bincode = "1.3"

[features]
default = []
secp256k1 = ["cita-crypto/secp256k1", "libproto/secp256k1"]
ed25519 = ["cita-crypto/ed25519", "libproto/ed25519"]
sm2 = ["cita-crypto/sm2", "libproto/sm2"]
sha3hash = ["hashable/sha3hash", "libproto/sha3hash"]
blake2bhash = ["hashable/blake2bhash", "libproto/blake2bhash"]
sm3hash = ["hashable/sm3hash", "libproto/sm3hash"]
