[package]
description = "Recursive-length prefix encoding, decoding, and compression"
repository = "https://github.com/paritytech/parity"
license = "MIT/Apache-2.0"
name = "rlp"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
elastic-array = "0.11"
cita-types = { path = "../cita-types" }
lazy_static = "1.1"
rustc-hex = "2.1"
byteorder = "1.0"
