[package]
name = "tx_pool"
version = "0.6.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"

[dependencies]
libproto = { path = "../libproto" }
util = { path = "../util" }
cita-crypto = { path = "../cita-crypto" }
cita-types = { path = "../cita-types" }

[features]
default = ["sm2", "sm3hash"]
secp256k1 = ["cita-crypto/secp256k1", "libproto/secp256k1"]
ed25519 = ["cita-crypto/ed25519", "libproto/ed25519"]
sm2 = ["cita-crypto/sm2", "libproto/sm2"]
sha3hash = ["libproto/sha3hash"]
blake2bhash = ["libproto/blake2bhash"]
sm3hash = ["libproto/sm3hash"]
