[package]
name = "util"
version = "0.6.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
cita-types = { path = "../cita-types" }
parking_lot = "0.6"
ansi_term = "0.9"
tiny-keccak= "1.4"
serde = "1.0"
toml = "0.4"
git2 = "0.7"
rustc_version = "0.2.0"
backtrace = "0.3"
cita-logger = "0.1.0"
