[package]
name = "util"
version = "0.6.1"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
cita-types = { path = "../cita-types" }
parking_lot = "0.12"
ansi_term = "0.12"
tiny-keccak= "2.0"
serde = "1.0"
toml = "0.7"
git2 = "0.16"
rustc_version = "0.4"
backtrace = "0.3"
cita-logger = "0.1"
